# ChainBridge

./: .coverage  .dockerignore  .editorconfig  .env.backup  .env.example  .gitignore  .markdownlint.json  .markdownlintignore  .pre-commit-config.yaml  .pylintrc  CLAUDE.md  COMPETITIVE_REALITY.md  CONTRIBUTING.md  CTO_RESOLUTION_SUMMARY.md  Dockerfile  Dockerfile.distroless  Dockerfile.ig-node  Dockerfile.node  Dockerfile.sovereign  ENTERPRISE_README.md  FINAL_FIX_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  LIVE_DATA_ENFORCEMENT.md  LIVE_TRADING_SAFETY.md  LOCAL_SAVE_README.md  ML_DEPENDENCIES.md  MODULAR_ARCHITECTURE.md  MULTI_SIGNAL_IMPLEMENTATION.md  Makefile  MultiSignalBot.py  MultiSignalBot.py.backup  OPTIONAL_DEPENDENCIES_FIX.md  PROOFPACKS_API.md  PR_BODY.md  PR_DESCRIPTION.md  QUICKSTART_NEW_LISTINGS.md  README-QUICK-CHECKS.md  README.md  README_ADAPTIVE_WEIGHT_MODEL.md  (+204 more)
.backup_p22/: chainpay.db  settlement_actions.db
.devcontainer/: Dockerfile
.githooks/: commit-msg  pre-commit
.github/: CI_RERUN.md  CODEOWNERS  PULL_REQUEST_DESCRIPTION.md  SECURITY.md  chainbridge-rules.md  copilot-instructions.md  copilot.md  pull_request_template.md
.venv-lean/: pyvenv.cfg
ChainBridge/: .coverage  .flake8  .gitignore  .pre-commit-config.yaml  AGENT_FRAMEWORK_COMPLETE.md  ARCHITECTURE.md  BLACK_FORMATTING_GUIDE.md  CHAINBRIDGE_INTEGRATION_SUMMARY.md  CHAINSALVAGE_COMPLETION.md  CODE_FORMATTING_STATUS.md  COPILOT_CONTEXT.md  CTO_RESOLUTION_SUMMARY.md  DOCKER_STARTUP_GUIDE.sh  DOCUMENTATION_INDEX.md  Dockerfile  Dockerfile.enterprise  EVENT_DRIVEN_PAYMENTS_IMPLEMENTATION.md  EVENT_DRIVEN_PAYMENTS_QUICK_TEST.md  FINAL_FIX_SUMMARY.md  GOVERNANCE.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  LIVE_DATA_ENFORCEMENT.md  LOCAL_SAVE_README.md  M02_QUICK_REFERENCE.md  M02_SPRINT_LAUNCH.md  MILESTONE_01_VERTICAL_SLICE.md  MODULAR_ARCHITECTURE.md  MULTI_SIGNAL_IMPLEMENTATION.md  Makefile  Makefile.dashboard  MultiSignalBot.py  OPERATOR_BACKEND_DELIVERY_SUMMARY.md  OPERATOR_CONSOLE_FILES.txt  OPERATOR_CONSOLE_READY.md  OPERATOR_VIEW_NOTES.md  OPTIONAL_DEPENDENCIES_FIX.md  PHASE_2_COMPLETE.md  PHASE_3_DEPLOY_CHECKLIST.sh  PHASE_3_QUICK_START.sh  (+148 more)
_incoming/: response_20260106_143138.md
active_pacs/: BER-CANVAS-REPLACEMENT-45.json  BER-PAC-JEFFREY-SCRAM-SCHEMA-REPLACEMENT-R2A-001.json  PAC-ALEX-P520-FORMAL-VERIFICATION.xml  PAC-AU-SUPREMACY-57-SYNTHESIS.json  PAC-AU-SUPREMACY-TRANSMISSION-58.json  PAC-BLIND-PORTAL-28.json  PAC-CANVAS-DEPLOY-39.json  PAC-CANVAS-REPLACEMENT-45.json  PAC-CORRECTIVE-ENV-LOCK-59.json  PAC-GENESIS-CERTIFIER-29.json  PAC-GOV-P1501-DIGITAL-INSPECTOR-GENERAL.xml  PAC-GOV-P820-SCRAM-IMPLEMENTATION.xml  PAC-INFRA-P1502-IG-NODE-BUILD.xml  PAC-INFRA-P710-SOVEREIGN-RUNNER.xml  PAC-INVARIANTS-LOCKED-20260116.json  (+15 more)
api/: ingress.py  (+28 more)
chainbridge_kernel/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
chainbridge_kernel/benches/: speed_moat.rs
chainbridge_kernel/python/: chainbridge_kernel.py
chainbridge_kernel/src/: erp_shield.rs  error.rs  ffi.rs  friction.rs  gaas_gateway.rs  identity.rs  ledger.rs  lib.rs  main.rs  models.rs  observability.rs  scram_sentinel.rs  signal_handler.rs  validator.rs
chainbridge_kernel/src/cognitive/: challenge.rs  decision.rs  mod.rs  timer.rs
chainbridge_kernel/src/hal/: attestation.rs  hsm.rs  mod.rs  mode.rs  secure_memory.rs
chainbridge_kernel/tests/: stress_test_ffi.py  swarm_saturation_test.py
(+5358 files in other folders)
