[package]
name = "chainbridge_kernel"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.8"
chrono = { version = "0.4.42", features = ["serde"] }
ed25519-dalek = { version = "2.2.0", features = ["serde"] }
hex = "0.4.3"
lazy_static = "1.5.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.44"
tracing-appender = "0.2.4"
tracing-subscriber = { version = "0.3.22", features = ["json", "env-filter"] }

[dev-dependencies]
criterion = { version = "0.8.1", features = ["html_reports"] }

[[bench]]
name = "speed_moat"
harness = false
